fix put command
